Tue Jun 18 02:21:54 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/ruby/envutil.rb (EnvUtil.with_default_external): add for
	  changing Encoding.default_external without warnings.

	* test/ruby/envutil.rb (EnvUtil.with_default_internal): ditto.

	* test/ruby/test_io_m17n.rb: use above with_default_external.

Tue Jun 18 00:43:27 2013  Zachary Scott  <zachary@zacharyscott.net>

	* vm_backtrace.c: Update rdoc for Backtrace#label with @_ko1

Tue Jun 18 00:34:57 2013  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

merge revision(s) 41347: [Backport #5048] [Backport #5465] [Backport #8319]

        * ext/tk/extconf.rb: support s390x (Thanks to bkabrda) [Bug #5465]

	* ext/tk/extconf.rb: apply [Bug #5048]

	* ext/tk/lib/tk/canvas.rb,ext/tk/sample/demos-{en,jp}/{tree.rb,widget}:
	  fix bug (Thanks to zzak) [ruby-trunk - Bug #8319]

Sun Jun 16 01:56:54 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (FL_SET_EMBED): shared object is frozen even when get
	  unshared.

	* array.c (rb_ary_modify): ARY_SET_CAPA needs unshared array.

Sun Jun 16 01:32:26 2013  TAKANO Mitsuhiro <tak@no32.tk>

	* insns.def: fix condition.

Sun Jun 16 01:22:35 2013  Eric Hodel  <drbrain@segment7.net>

	* ext/socket/extconf.rb:  Enable RFC 3542 IPV6 socket options for OS X
	  10.7+.  [ruby-trunk - Bug #8517]

Sun Jun 16 01:11:10 2013  Koichi Sasada  <ko1@atdot.net>

	* compile.c (rb_iseq_compile_node): fix location of a `trace'
	  instruction (b_return event).
	  [ruby-core:55305] [ruby-trunk - Bug #8489]
	  (need a backport to 2.0.0?)

	* test/ruby/test_settracefunc.rb: add a test.

Sun Jun 16 00:30:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (eval_string_with_cref): propagate absolute path from the
	  binding if it is given explicitly.  patch by Gat (Dawid Janczak) at
	  [ruby-core:55123]. [Bug #8436]

Wed Jun 12 23:41:21 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_insnhelper.c (vm_yield_setup_block_args): partially revert r41019.
	  The code is not useless.
