@@ -1,3 +1,13 @@
+Tue Jun 18 02:49:20 2013  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* test/ruby/envutil.rb (assert_separately): stop_auto_run of
+	  Test::Unit::Runner to prevent auto runner use ARGV.
+
+	* test/ruby/envutil.rb (assert_separately): add $: to separate process.
+
+	* test/ruby/envutil.rb (assert_separately): fail if stderr is not
+	  empty and ignore_stderr is false.
+
 Tue Jun 18 02:21:54 2013  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* test/ruby/envutil.rb (EnvUtil.with_default_external): add for
